<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Create Event"
            android:textSize="24sp" />


        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint ="Event Title"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/title_edit5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint = "Event Description"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint = "Waiting List Size (optional)"
            android:maxLength="9"/>

        <EditText
            android:id="@+id/editTextNumber2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint = "Event Size"
            android:maxLength="9"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/registration_start"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="Registration Start"
                android:textSize="18sp"
                android:inputType="date"/>

            <TextView
                android:id="@+id/to"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="to" />

            <EditText
                android:id="@+id/registration_end"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="Registration End"
                android:textSize="18sp"
                android:inputType="date"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/event_start"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="Event Start"
                android:textSize="18sp"
                android:inputType="date"/>

            <TextView
                android:id="@+id/to2"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="to" />

            <EditText
                android:id="@+id/event_end"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="Event End"
                android:textSize="18sp"
                android:inputType="date"/>
        </LinearLayout>

        <Switch
            android:id="@+id/location_loc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Geolocation requirement" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/imagePreview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="Selected Image Preview"
                android:scaleType="fitCenter"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/removeImageButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end|top"
                android:background="@android:color/transparent"
                android:contentDescription="Remove Image"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:visibility="gone" />
        </FrameLayout>

        <Button
            android:id="@+id/uploadImage_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Upload Poster" />

        <Button
            android:id="@+id/finish_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Finish" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cancel" />
    </LinearLayout>
</ScrollView>