<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/landing_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- @username should not be hard coded -->

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingBottom="24dp"
                android:text="Welcome to\nTeam Omelet's\nEvent Lottery System!"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge" />

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alignmentMode="alignMargins"
                android:columnCount="2"
                android:padding="12dp"
                android:rowCount="3">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/eventsIcon"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/ic_events" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Events"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/facilitiesIcon"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/ic_facility" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Facilities"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/notificationsIcon"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/ic_notifications" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Notifications"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/profileIcon"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/ic_profile" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Profile"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/scanQRIcon"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/ic_scan" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Scan QR Code"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/settingsIcon"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/ic_setting" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Settings"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
                </LinearLayout>

            </GridLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
