...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Facility Name"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/facility_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Facility Name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView_fd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Facility Description" />

        <EditText
            android:id="@+id/facility_description_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Facility description"
            android:textSize="18sp" />

        <Button
...
